--- a/detective-frontend/src/shared/styles/ScenarioSelectPage.css
+++ b/detective-frontend/src/shared/styles/ScenarioSelectPage.css
@@ -326,7 +326,7 @@
 }
 
 .sc-card__btn {
-  position: relative; /* 별 위치 고정을 위해 부모를 relative로 */
+  position: relative; /* 별 위치 고정*/
   display: block;
   width: 100%;
   height: 100%;
